tied starting of manager 3d to the poststep phase of the main phaser engine; however this is still not rendering correctly on iOS (height is not 100%)

--- a/code/styles/layout.css
+++ b/code/styles/layout.css
@@ -21,8 +21,8 @@ body {
 canvas {
   top: 0px;
   left: 0px;
-  width: 100svw;
-  height: 100svh;
+  /* width: 100svw; */
+  /* height: 100svh; */
   display: block;
   position: absolute;
 }
@@ -31,8 +31,8 @@ main {
   top: 0px;
   left: 0px;
   position: absolute;
-  width: 100svw;
-  height: 100svh;
+  /* width: 100svw;
+  height: 100svh; */
 }
 
 #copyright-notice {
@@ -51,7 +51,6 @@ main {
 }
 
 #phase {
-  z-index: 2;
   opacity: 0 !important;
   background-color: transparent;
   pointer-events: all;
@@ -61,7 +60,7 @@ main {
 #three {
   z-index: 1;
   background-color: transparent;
-  pointer-events: all;
+  pointer-events: none;
   border-radius: 32px;
 }
 
